# Piper

./: Dockerfile  README.md  pyproject.toml  requirements.txt
piper/: __init__.py  bootstrap.py
piper/application/: application_runner.py
piper/controller/: __init__.py  home_controller.py
piper/controller/common/: common_state_controller.py  notion_config_controller.py  screen_stack_controller.py  tfl_data_controller.py  weather_data_controller.py  yeelight_controller.py
piper/screen/: __init__.py  home_screen.py
piper/state/: home_state.py
piper/state/common/: notion_config_state.py  tfl_data_state.py  weather_data_state.py  yeelight_state.py
piper/util/: font_config.py  texture_config.py  tfl_arrival.py  weather_util.py  yeelight_bulb.py
piper/view/: __init__.py  home_view.py
piper/view/components/: __init__.py  dimmed_home_component.py  home_screen_card.py  stocks_card_info.py  tfl_card_info.py  weather_card_info.py
src/: __init__.py
src/components/: button.py
src/handlers/: __init__.py  alarm_handler.py  base_handler.py  clock_handler.py  config_handler.py  spotify_handler.py  stock_handler.py  tfl_handler.py  timed_handler.py  weather_handler.py
src/screens/: __init__.py  alarm_screen.py  home_screen.py  timer_screen.py
src/util/: __init__.py  store.py
src/util/notion/: __init__.py
